Widen sidebar from 15% to 25% to fix category name truncation

--- a/themes/graymill/static/css/custom.css
+++ b/themes/graymill/static/css/custom.css
@@ -52,7 +52,7 @@ a {
 
 sidebar {
     font-size: 1.25em;
-    width: 15%; 
+    width: 25%; 
     height: 100%;
     position: fixed;
     right: 0;
@@ -100,7 +100,7 @@ sidebar > h2 {
 maincontent {
     display: block;
     line-height: 1.6em;
-    width: 85%;
+    width: 75%;
 }
 
 maincontent > ol {
@@ -138,7 +138,7 @@ maincontent table tbody tr td .highlight {
 
 .page-title {
     border-bottom: 1.5px solid #eee;
-    width: 85%;
+    width: 75%;
 }
 
 hr {
@@ -246,14 +246,14 @@ ul {
     right: 0;
     max-width: none;
     position: fixed;
-    width: 15%;
+    width: 25%;
     padding: 0;
     padding-top: 1px;
     font-size: 8px;
   }
 
   maincontent {
-    width: 85%;
+    width: 75%;
     font-size: 10px;
   }
 
